:wrench: Mobile overflow fix

--- a/src/app.css
+++ b/src/app.css
@@ -10,7 +10,8 @@
 
 @layer base {
 	html {
-		@apply h-full;
+		height: 100%;
+		overflow-x: hidden;
 	}
 
 	body {
